feat: return large command output as action files
